update git-buildpackage config
some clean-up and remove deprecated section header

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,21 +1,30 @@
 # Configuration file for git-buildpackage and friends
-# 
+#
 # tweaked by Ichthyo for maintining a slowmoVideo package
 
 [DEFAULT]
-# baseline point for upstream sources tarball:
-upstream-branch = upstream-release
+# what to use as "upstream" tarball. BRANCH=use the "upstream-branch" | TAG=use the rev with the upstream-tag
+upstream-tree = TAG
 upstream-tag = v%(version)s
-
 # branch for maintaining the debian packaging:
 debian-branch = debian
 debian-tag = deb/%(version)s
 # No need to use pristine-tar; upstream sources are clean
 pristine-tar = False
-compression = xz
 
-[git-buildpackage]
-# what to use as "upstream" tarball. BRANCH=use the "upstream-branch" | TAG=use the rev with the upstream-tag
-upstream-tree = BRANCH
+[buildpackage]
+# area for building packages
+export-dir = ../
+ignore-new = True
 sign-tags = True
+compression = xz
+export = INDEX
+
+
+[dch]
+git-log = --no-merges
+# include 7 digits of the commit id in the changelog enty
+id-length = 7
+# use author/email configured in Git repo
+git-author = True
 
