Upgrade to OpenCV 4.x -- 0.5+git20190116-3
* Upload to unstable
* Bump standards version to 4.4.1
* Apply patch for opencv4 to fix FTBFS. (Closes: #922598)

--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: slowmovideo
 Section: video
 Priority: optional
 Maintainer: Gürkan Myczko <gurkan@phys.ethz.ch>
-Build-Depends: debhelper (>= 11), cmake, qtbase5-dev, qtscript5-dev, libopencv-dev
-Standards-Version: 4.2.1
+Build-Depends: debhelper (>= 11), cmake, qtbase5-dev, qtscript5-dev, libopencv-dev (>= 4)
+Standards-Version: 4.4.1
 Homepage: http://slowmovideo.granjow.net/
 
 Package: slowmovideo
